# dwall

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  biome.json  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
.github/: changelog-configuration.json  dependabot.yml
.github/workflows/: cleanup-old-caches.yml  nightly.yml  pr-check.yml  publish.yml  warm-cache.yml
.scripts/: mirror-latest-json.js
crates/dwall/: Cargo.toml  build.rs
crates/dwall-settings/: Cargo.toml  tauri.conf.json
crates/dwall-settings/capabilities/: default.json
crates/dwall-settings/src/: error.rs  main.rs
crates/dwall-settings/src/app/: commands.rs  setup.rs
crates/dwall-settings/src/domain/: monitor.rs  theme.rs
crates/dwall-settings/src/infrastructure/: filesystem.rs  window.rs
crates/dwall-settings/src/infrastructure/network/download/: downloader.rs  http_service.rs
crates/dwall-settings/src/services/: theme_service.rs
crates/dwall-settings/src/services/cache/: cache_manager.rs  mod.rs
crates/dwall-settings/src/utils/: helpers.rs  mod.rs
crates/dwall/src/: config.rs  error.rs  lazy.rs  lib.rs
crates/dwall/src/core/: daemon.rs
crates/dwall/src/domain/geography/: mod.rs  provider.rs
crates/dwall/src/domain/time/: mod.rs  solar_calculator.rs  solar_transitions.rs
crates/dwall/src/domain/visual/: color_scheme.rs  mod.rs  theme_processor.rs  wallpaper.rs
crates/dwall/src/infrastructure/display/: device_query.rs  display_query.rs  wallpaper_setter.rs
crates/dwall/src/infrastructure/filesystem/: mod.rs
crates/dwall/src/infrastructure/platform/windows/: registry_client.rs
crates/dwall/src/utils/: cache.rs  logging.rs  mod.rs
crates/dwall/src/utils/datetime/: consts.rs  math.rs  mod.rs
crates/logging/: Cargo.toml  build.rs
crates/logging/src/: colors.rs  lib.rs  macros.rs  rich.rs
crates/time/: Cargo.toml
crates/time/src/: error.rs  lib.rs  math.rs  month.rs  offset.rs
crates/time/src/offset/: error.rs  unix.rs  windows.rs
daemon/: Cargo.toml  build.rs
daemon/src/: color_mode.rs  config.rs  error.rs  lazy.rs  lib.rs  log.rs  main.rs  position.rs  registry.rs  solar.rs
daemon/src/core/: daemon.rs
daemon/src/domain/: mod.rs
daemon/src/domain/geography/: coordinates.rs  mod.rs  position.rs  provider.rs
daemon/src/domain/time/: mod.rs  solar_calculator.rs
daemon/src/domain/visual/: color_scheme.rs  mod.rs  theme_processor.rs  wallpaper.rs
daemon/src/infrastructure/: mod.rs
daemon/src/infrastructure/display/: device_query.rs  display_query.rs  error.rs  mod.rs  monitor_manager.rs  wallpaper_setter.rs
daemon/src/infrastructure/filesystem/: config_manager.rs  mod.rs
daemon/src/infrastructure/platform/windows/: mod.rs  registry_client.rs
daemon/src/monitor/: device_interface.rs  display_config.rs  error.rs  mod.rs  monitor_info.rs  wallpaper_manager.rs
daemon/src/position/: geolocation_access.rs  mod.rs  position_manager.rs  position_types.rs  windows_api_helper.rs
daemon/src/theme/: manager.rs  mod.rs  processor.rs  validator.rs
daemon/src/utils/: helpers.rs  logging.rs  mod.rs  string.rs
daemon/src/utils/datetime/: error.rs  math.rs  mod.rs  month.rs
docs/: README.md  README.zh-CN.md  dwall-vs-auto-dark-mode.md  dwall-vs-auto-dark-mode.zh-CN.md  dwall-vs-windynamicdesktop.md  dwall-vs-windynamicdesktop.zh-CN.md  shared-comparison-content.md  shared-comparison-content.zh-CN.md  technical-comparison.md  technical-comparison.zh-CN.md  user-benefits.md  user-benefits.zh-CN.md
images/: home.avif  settings.avif
src/: App.css.ts  App.scss  App.tsx  commands.ts  index.css  index.css.ts  index.scss  index.tsx  lazy.ts  lazy.tsx  router.ts  routes.ts  themes.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.debug.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_start.rs  cache.rs  color_mode.rs  config.rs  download.rs  error.rs  event.rs  fs.rs  geo.rs  lazy.rs  lib.rs  main.rs  monitor.rs  postion.rs  process_manager.rs  setup.rs  solar.rs  theme.rs  tracker.rs  tray.rs  update.rs  window.rs
src-tauri/src/app/: commands.rs  mod.rs  setup.rs  tracker.rs
src-tauri/src/cache/: cache_manager.rs  cleanup_service.rs  error.rs  fs_service.rs  http_service.rs
src-tauri/src/domain/: mod.rs  monitor.rs  settings.rs  theme.rs
src-tauri/src/download/: downloader.rs  error.rs  extractor.rs  file_manager.rs  http_service.rs
src-tauri/src/i18n/: keys.rs  mod.rs  utils.rs
src-tauri/src/i18n/locales/: en_us.rs  ja_jp.rs  ko_kr.rs  mod.rs  zh_cn.rs  zh_hk.rs  zh_tw.rs
src-tauri/src/infrastructure/: filesystem.rs  mod.rs  process.rs  registry.rs  window.rs
src-tauri/src/infrastructure/network/: client.rs  mod.rs
src-tauri/src/infrastructure/network/download/: downloader.rs  error.rs  extractor.rs  file_manager.rs  http_service.rs  mod.rs  task_manager.rs
src-tauri/src/services/: download_service.rs  mod.rs  theme_service.rs
src-tauri/src/services/cache/: cache_manager.rs  cleanup_service.rs  error.rs  fs_service.rs  http_service.rs  mod.rs
src-tauri/src/theme/: manager.rs  mod.rs  validator.rs
src-tauri/src/utils/: helpers.rs
src-tauri/windows/: hooks.nsi
src/commands/: autostart.ts  config.ts  fs.ts  index.ts  monitor.ts  shell.ts  system.ts  theme.ts  translation.ts  update.ts  window.ts
src/components/: Image.tsx  SidebarButtons.tsx  ThemeActions.tsx  ThemeContext.tsx  ThemeMenu.tsx  ThemeShowcase.tsx  TranslationsContext.tsx
src/contexts/: ConfigContext.tsx  MonitorContext.tsx  RouteContext.tsx  SettingsContext.tsx  TaskContext.tsx  ThemeContext.tsx  ThemesContext.tsx  TranslationsContext.tsx  UpdateContext.tsx  index.ts  index.tsx
src/hooks/: useAppInitialization.tsx  useColorMode.tsx  useDark.ts  useFontLoader.ts  useLocationPermission.tsx  useMonitorSelection.tsx  useMonitorThemeSync.tsx  usePausableTimeout.ts  useTaskManager.tsx  useThemeApplication.tsx  useThemeManager.tsx  useThemeSelection.tsx  useThemeState.tsx  (+1 more)
types/: config.d.ts  context.d.ts  i18n.d.ts  monitor.d.ts  theme.d.ts
(+182 files in other folders)
