[workspace]
resolver = "2"
members = ["daemon", "src-tauri"]

[workspace.package]
authors = ["thep0y"]
version = "0.1.23"
# homepage = ""
repository = "https://github.com/dwall-rs/dwall"
license = "AGPL-3.0"
edition = "2021"

[workspace.dependencies]
dirs = { version = "6", default-features = false }
thiserror = { version = "2", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
tracing = { version = "0", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0", default-features = false, features = [
  "fmt",
  'time',
  "local-time",
  'env-filter',
  'json',
] }
tokio = { version = "1", default-features = false }
windows = { version = "0.61", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
