[package]
name = "dwall"
description = "Dwall daemon"
exclude = ["CHANGELOG.md", "/target"]
readme = "README.md"
version.workspace = true
authors.workspace = true
# homepage.workspace = true
# repository.workspace = true
# categories.workspace = true
# license.workspace = true
edition.workspace = true

[dependencies]
windows = { version = "0", default-features = false, features = [
    "Devices_Geolocation",
    "Win32_System_Registry",
    "System_UserProfile",
    "Storage",
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
serde_valid = "0"
tokio = { version = "1", default-features = false, features = [
    "sync",
    "macros",
    "time",
    "fs",
    "rt",
    "rt-multi-thread",
] }
time = { version = "0", default-features = false, features = [
    'macros',
    'serde',
] }
tracing = { version = "0", default-features = false, features = [
    "log",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0", default-features = false, features = [
    "fmt",
    'time',
    "local-time",
    'env-filter',
    'json',
] }
thiserror = { version = "2", default-features = false }
toml = { version = "0", default-features = false, features = [
    "display",
    "parse",
] }
dirs = { version = "5", default-features = false }
regex = { version = "1", default-features = false }

[features]
default = []
log-color = ["tracing-subscriber/ansi"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
