[package]
name = "dwall"
description = "Dwall daemon"
exclude = ["CHANGELOG.md", "/target"]
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
# homepage.workspace = true
repository.workspace = true
# license.workspace = true

[dependencies]
serde_valid = "1"
time = { version = "0", default-features = false, features = [
  'macros',
  'serde',
] }
toml = { version = "0", default-features = false, features = [
  "display",
  "parse",
] }
tokio = { workspace = true, features = [
  "sync",
  "macros",
  "time",
  "fs",
  "rt",
  "rt-multi-thread",
] }
regex = { version = "1", default-features = false }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
windows = { workspace = true, default-features = false, features = [
  "Devices_Geolocation",
  "Win32_System_Registry",
  "System_UserProfile",
  "Storage_Streams",
  "Win32_UI",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Win32_Graphics",
  "Win32_Graphics_Gdi",
  "Win32_Devices_Display",
  "Win32_Devices_DeviceAndDriverInstallation",
] }
windows-strings = { version = '0.3.1', features = ['std'] }
windows-result = { version = '0.3.1', features = ['std'] }

[features]
default = []
log-color = ["tracing-subscriber/ansi"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
