[package]
name = "dwall"
description = "Dwall daemon"
exclude = ["CHANGELOG.md", "/target"]
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
# homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "dwall"
path = "src/bin/daemon.rs"

[build-dependencies]
tauri-winres = { version = "0", optional = true }

[dependencies]
toml = { version = "0.9", default-features = false, features = [
  "display",
  "parse",
  "serde",
] }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, default-features = false, features = [] }
tracing-subscriber = { workspace = true }
windows = { workspace = true, default-features = false, features = [
  "std",
  "Devices_Geolocation",
  "Win32_System_Registry",
  "System_UserProfile",
  "Storage_Streams",
  "Win32_UI",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Win32_Graphics",
  "Win32_Graphics_Gdi",
  "Win32_Devices_Display",
  "Win32_Devices_DeviceAndDriverInstallation",
] }

[features]
default = []
log-color = ["tracing-subscriber/ansi"]
build-script = ["tauri-winres"]
log-max-level-info = ["tracing/release_max_level_info"]
