[package]
name = "dwall-settings"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dwall_settings_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
dwall = { version = "0", path = "../daemon" }

serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "process",
] }
tracing = { version = "0", default-features = false, features = [
    "log",
    "release_max_level_info",
] }
thiserror = "2"
windows = { version = "0", default-features = false, features = [
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Dwm",
] }
reqwest = "0"
futures-util = "0"
zip-extract = "0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[features]
default = []
log-color = ["dwall/log-color"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
