[package]
name = "dwall-settings"
description = "Dwall settings"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
dwall = { version = "0", path = "../daemon" }

reqwest = { version = "0", default-features = false }
futures-util = { version = "0", default-features = false }
zip-extract = { version = "0", default-features = false, features = [
  "deflate",
] }
open = { version = "5", default-features = false }
tokio = { workspace = true, features = ["macros", "process"] }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
windows = { workspace = true, features = [
  "Win32_System_Registry",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_ProcessStatus",
  "Win32_Graphics_Dwm",
  "Wdk_System_SystemServices",
  "Win32_System_SystemInformation",
  "Win32_Globalization",
  "Win32_System_Threading",
] }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
tauri-plugin-shell = "2"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"

[features]
default = []
log-color = ["dwall/log-color"]
devtools = ["tauri/devtools"]
log-max-level-info = ["tracing/release_max_level_info"]
