[package]
name = "time"
authors.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0", default-features = false, features = [
    "Win32_System_Time",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
